- https://github.com/eclipse-syson/syson/issues/1487[#1487] [explorer] Fix NPE thrown by `getTreePath` on Explorers defined with Sirius Tree APIs instead of Sirius View DSL APIs.
This issue was not visible in SysON but could appear in downstream applications defining explorers with the Sirius Tree APIs.

=== Improvements

=== New features


== v2025.8.0

=== Shapes

- Added a duplicate object menu item for SysMLv2 elements in the _Explorer_ view.
- Added a diagram tool to duplicate graphical nodes in diagrams.

=== Breaking changes
- https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Aligned the metamodel with the SysMLv2 2025-04 specification released in April 2025 (see https://www.omg.org/spec/SysML/ for more details) and the KerML 2025-04 specification released in April 2025 (see https://www.omg.org/spec/KerML/ for more details).

**In any case, download all your existing models/projects and back up your database before upgrading to 2025.8.0 (as always).**

The new concepts are:

* `InstantiationExpression` (inherits from `Expression`)
* `ConstructorExpression` (inherits from `InstantiationExpression`)

The new attributes are:

* On `Feature`
** `isConstant : EBoolean`
* On `Usage`
** `mayTimeVary : EBoolean`

The new operations are:

* On `Element`
** `path() : EString`
* On `Feature`
** `isFeaturingType(Type) : EBoolean`
** `canAccess(Feature) : EBoolean`
* On `Type`
** `isCompatibleWith(Type) : EBoolean`
** `allRedefinedFeaturesOf(Membership) : Feature`

The new references are:

* On `Connector`
** `defaultFeaturingType : Type`
* On `InstantiationExpression`
** `argument : Expression`

The updates are:

* The concept `FlowConnectionDefinition` has been renamed to `FlowDefinition`.
* The concept `FlowConnectionUsage` has been renamed to `FlowUsage`.
* The concept `SuccessionFlowConnectionUsage` has been renamed to `SuccessionFlowUsage`.
* The concept `ItemFlow` has been renamed to `Flow`.